Netflix and Arrays

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,10 +1,8 @@
 /207863__stumber__percussion-hit.wav
+/275154__bird-man__moo.wav
 /381982__djfroyd__snare-hit.wav
-<<<<<<< HEAD
 /Backpack.class
 /BookOfIllusions.class
-=======
->>>>>>> origin/master
 /ButtonListener.class
 /ButtonListenerRunner.class
 /Cat.class
@@ -12,6 +10,7 @@
 /CatRecipeRunner.class
 /CatRunner.class
 /Class.class
+/CowTimer.class
 /DrumKit.class
 /DuelingButtons.class
 /HarryPotter.class
@@ -19,19 +18,17 @@
 /Human.class
 /InfraredSensor.class
 /Jeopardy.class
+/LandOfTurtles.class
 /MazeHugLeft.class
 /MazeHugRight.class
-<<<<<<< HEAD
+/Movie.class
+/NetflixQueue.class
+/NetflixRunner.class
 /Pencil.class
 /PhotoQuiz.class
 /Robot.class
 /RobotArmy.class
 /Ruler.class
-=======
-/PhotoQuiz.class
-/Robot.class
-/RobotArmy.class
->>>>>>> origin/master
 /SeaCreature.class
 /SeaCreatureRunner.class
 /ShapeDrawer.class
@@ -39,24 +36,13 @@
 /Smurf.class
 /SmurfRunner.class
 /SpeedChallenge.class
-<<<<<<< HEAD
 /Supply.class
 /Textbook.class
-=======
->>>>>>> origin/master
 /downArrow.png
 /drum.png
 /largeDrum.jpg
 /leftArrow.png
 /rightArrow.jpg
 /upArrow.png
-<<<<<<< HEAD
-/LandOfTurtles.class
-/CowTimer.class
-/275154__bird-man__moo.wav
-/NetflixRunner.class
-/Movies.class
-/NetflixQueue.class
-/Movie.class
-=======
->>>>>>> origin/master
+/Family.class
+/Person.class
