ClickAButton.java, SlotMachine.java, Picasso.java (IP)
star wars jokes and gummy candy rats

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -12,6 +12,7 @@
 /CatRunner.class
 /ChuckleClicker.class
 /Class.class
+/ClickAButton.class
 /CowTimer.class
 /DrumKit.class
 /DuelingButtons.class
@@ -55,4 +56,14 @@
 /rightArrow.jpg
 /twitter4j-core-3.0.5.jar
 /upArrow.png
-/ClickAButton.class
+/mole(for-eating).jpg
+/mole.jpg
+/Screen Shot 2017-10-25 at 16.07.40.png
+/moleshot.png
+/SlotMachine.class
+/orange.jpeg
+/banana.jpg
+/scarycherry.jpg
+/gummicnady.jpg
+/SlotMachine$TimerUpdate.class
+/ColorPalette.class
