--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -14,10 +14,13 @@
 /Class.class
 /ClickAButton.class
 /ColorPalette.class
+/Convert.class
 /CowTimer.class
 /DrumKit.class
 /DuelingButtons.class
 /Family.class
+/GameObject.class
+/GamePanel.class
 /GetLatestTweet.class
 /HarryPotter.class
 /HarryPotterRunner.class
@@ -26,6 +29,7 @@
 /JamesBond.class
 /Jeopardy.class
 /LandOfTurtles.class
+/LeagueInvaders.class
 /MazeHugLeft.class
 /MazeHugRight.class
 /Movie.class
@@ -55,9 +59,6 @@
 /SpeedChallenge.class
 /Supply.class
 /Textbook.class
-/TypingTutor.class
-/Vault.class
-/VaultRunner.class
 /banana.jpg
 /commons-logging-1.1.3.jar
 /downArrow.png
@@ -73,4 +74,9 @@
 /scarycherry.jpg
 /twitter4j-core-3.0.5.jar
 /upArrow.png
-/Convert.class
+/TypingTutor.class
+/Vault.class
+/VaultRunner.class
+/Rocketship.class
+/ObjectManager.class
+/League_Invaders_Project/
