--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -12,8 +12,33 @@
 /CatRunner.class
 /ChuckleClicker.class
 /Class.class
+/ClickAButton.class
+/ColorPalette.class
+/Convert.class
+/CowTimer.class
+/DrumKit.class
+/DuelingButtons.class
+/Family.class
+/GetLatestTweet.class
+/HarryPotter.class
+/HarryPotterRunner.class
+/InfraredSensor.class
+/JamesBond.class
+/Jeopardy.class
+/LandOfTurtles.class
 /League_Invaders_Project/
+/MazeHugLeft.class
+/MazeHugRight.class
+/Movie.class
+/NetflixQueue.class
+/NetflixRunner.class
 /Pencil.class
+/Person.class
+/PhotoQuiz.class
+/Picasso.class
+/PicassoRunner.class
+/Robot.class
+/RobotArmy.class
 /Ruler.class
 /Supply.class
 /Textbook.class
@@ -32,32 +57,7 @@
 /scarycherry.jpg
 /twitter4j-core-3.0.5.jar
 /upArrow.png
-/ClickAButton.class
-/ColorPalette.class
-/Convert.class
-/CowTimer.class
-/DrumKit.class
-/DuelingButtons.class
-/Family.class
-/GetLatestTweet.class
-/HarryPotter.class
-/HarryPotterRunner.class
 /Human.class
-/InfraredSensor.class
-/JamesBond.class
-/Jeopardy.class
-/LandOfTurtles.class
-/MazeHugLeft.class
-/MazeHugRight.class
-/Movie.class
-/NetflixQueue.class
-/NetflixRunner.class
-/Person.class
-/PhotoQuiz.class
-/Picasso.class
-/PicassoRunner.class
-/Robot.class
-/RobotArmy.class
 /SCalcAddition.class
 /SCalcDivision.class
 /SCalcMultiplication.class
@@ -75,3 +75,8 @@
 /TypingTutor.class
 /Vault.class
 /VaultRunner.class
+/alien.png
+/bullet.png
+/rocket.png
+/space.png
+/rocketImg.png
