ColorTeacher/Level 1 Test

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -22,6 +22,7 @@
 /GetLatestTweet.class
 /HarryPotter.class
 /HarryPotterRunner.class
+/Human.class
 /InfraredSensor.class
 /JamesBond.class
 /Jeopardy.class
@@ -40,8 +41,24 @@
 /Robot.class
 /RobotArmy.class
 /Ruler.class
+/SCalcAddition.class
+/SCalcDivision.class
+/SCalcMultiplication.class
+/SCalcSubtraction.class
+/SeaCreature.class
+/SeaCreatureRunner.class
+/ShapeDrawer.class
+/SimonSays.class
+/SimpleCalculator.class
+/SlotMachine$TimerUpdate.class
+/SlotMachine.class
+/Smurf.class
+/SmurfRunner.class
+/SpeedChallenge.class
 /Supply.class
 /Textbook.class
+/TypingTutor.class
+/Vault.class
 /banana.jpg
 /commons-logging-1.1.3.jar
 /downArrow.png
@@ -57,26 +74,5 @@
 /scarycherry.jpg
 /twitter4j-core-3.0.5.jar
 /upArrow.png
-/Human.class
-/SCalcAddition.class
-/SCalcDivision.class
-/SCalcMultiplication.class
-/SCalcSubtraction.class
-/SeaCreature.class
-/SeaCreatureRunner.class
-/ShapeDrawer.class
-/SimonSays.class
-/SimpleCalculator.class
-/SlotMachine$TimerUpdate.class
-/SlotMachine.class
-/Smurf.class
-/SmurfRunner.class
-/SpeedChallenge.class
-/TypingTutor.class
-/Vault.class
 /VaultRunner.class
-/alien.png
-/bullet.png
-/rocket.png
-/space.png
-/rocketImg.png
+/ColorTeacher.class
